force-app/main/default/objects/iTalentDev__SLC_Translated_Opportunity_Detail__c/fields/iTalentDev__All_Translated_Languages__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__All_Translated_Languages__c</fullName>
    <label>All Translated Languages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>