force-app/main/default/objects/iTalentDev__SLC_Translated_Opportunity_Detail__c/fields/iTalentDev__New_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__New_Document_Id__c</fullName>
    <label>New Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>