force-app/main/default/objects/iTalentDev__SLC_Translated_Opportunity_Detail__c/fields/iTalentDev__Translated_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_LeadSource__c</fullName>
    <label>Translated LeadSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>