force-app/main/default/objects/iTalentDev__SLC_Translated_Opportunity_Detail__c/fields/iTalentDev__Translated_StageName__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_StageName__c</fullName>
    <label>Translated StageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>